crates/crochet_parser/src/snapshots/crochet_parser__tests__trailing_comments.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(trailing_comments_after_num_lit)
---
Program {
    body: [
        VarDecl {
            span: 9..63,
            pattern: Ident(
                BindingIdent {
                    span: 13..14,
                    id: Ident {
                        span: 13..14,
                        name: "x",
                    },
                },
            ),
            type_ann: None,
            init: Some(
                Lit(
                    Num(
                        Num {
                            span: 17..18,
                            value: "5",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
