crates/crochet_parser/src/snapshots/crochet_parser__tests__tuples-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x = [1, [a, b]];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..20,
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 8..19,
                        kind: Tuple(
                            Tuple {
                                elems: [
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Expr {
                                            span: 9..10,
                                            kind: Lit(
                                                Num(
                                                    Num {
                                                        span: 9..10,
                                                        value: "1",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Expr {
                                            span: 12..18,
                                            kind: Tuple(
                                                Tuple {
                                                    elems: [
                                                        ExprOrSpread {
                                                            spread: None,
                                                            expr: Expr {
                                                                span: 13..14,
                                                                kind: Ident(
                                                                    Ident {
                                                                        span: 13..14,
                                                                        name: "a",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                        ExprOrSpread {
                                                            spread: None,
                                                            expr: Expr {
                                                                span: 16..17,
                                                                kind: Ident(
                                                                    Ident {
                                                                        span: 16..17,
                                                                        name: "b",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ],
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
