crates/crochet_parser/src/snapshots/crochet_parser__tests__tuples.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x = [];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..11,
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            id: Ident {
                                span: 4..5,
                                name: "x",
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 8..10,
                        kind: Tuple(
                            Tuple {
                                elems: [],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
