crates/crochet_parser/src/snapshots/crochet_parser__tests__type_annotations-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let msg: string = \\\"hello\\\";\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..26,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "msg",
                        },
                    },
                ),
                type_ann: Some(
                    Prim(
                        PrimType {
                            span: 9..15,
                            prim: Str,
                        },
                    ),
                ),
                init: Some(
                    Lit(
                        Str(
                            Str {
                                span: 18..25,
                                value: "hello",
                            },
                        ),
                    ),
                ),
                declare: false,
            },
        ],
    },
)
