crates/crochet_parser/src/snapshots/crochet_parser__tests__type_annotations-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let add = (a: number, b: number) => a + b\")"
---
Program {
    body: [
        VarDecl {
            span: 0..41,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "add",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..41,
                        params: [
                            Ident(
                                BindingIdent {
                                    span: 11..12,
                                    id: Ident {
                                        span: 11..12,
                                        name: "a",
                                    },
                                    type_ann: Some(
                                        Prim(
                                            PrimType {
                                                span: 14..20,
                                                prim: Num,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            Ident(
                                BindingIdent {
                                    span: 22..23,
                                    id: Ident {
                                        span: 22..23,
                                        name: "b",
                                    },
                                    type_ann: Some(
                                        Prim(
                                            PrimType {
                                                span: 25..31,
                                                prim: Num,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                        body: Op(
                            Op {
                                span: 36..41,
                                op: Add,
                                left: Ident(
                                    Ident {
                                        span: 36..37,
                                        name: "a",
                                    },
                                ),
                                right: Ident(
                                    Ident {
                                        span: 40..41,
                                        name: "b",
                                    },
                                ),
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
