crates/crochet_parser/src/snapshots/crochet_parser__tests__type_annotations-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let p: Point = {x: 5, y: 10};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..29,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "p",
                        },
                    },
                ),
                type_ann: Some(
                    TypeRef(
                        TypeRef {
                            span: 7..12,
                            name: "Point",
                            type_args: None,
                        },
                    ),
                ),
                init: Some(
                    Expr {
                        span: 15..28,
                        kind: Obj(
                            Obj {
                                props: [
                                    Prop(
                                        KeyValue(
                                            KeyValueProp {
                                                name: "x",
                                                value: Expr {
                                                    span: 19..20,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                span: 19..20,
                                                                value: "5",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ),
                                    Prop(
                                        KeyValue(
                                            KeyValueProp {
                                                name: "y",
                                                value: Expr {
                                                    span: 25..27,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                span: 25..27,
                                                                value: "10",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
