crates/crochet_parser/src/snapshots/crochet_parser__tests__type_annotations.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x: number = 5;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..18,
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            id: Ident {
                                span: 4..5,
                                name: "x",
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Prim(
                            PrimType {
                                span: 7..13,
                                prim: Num,
                            },
                        ),
                        span: 7..13,
                        inferred_type: None,
                    },
                ),
                init: Some(
                    Expr {
                        span: 16..17,
                        kind: Lit(
                            Num(
                                Num {
                                    span: 16..17,
                                    value: "5",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
